compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__bitwise_op_wrong_type_xor.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    var b : boolean\n    var r : real\n    var i : int\n    var n : nat\n    var _bi := b xor i\n    var _bn := b xor n\n    var _ib := i xor b\n    var _nb := n xor b\n    var _ri := r xor i\n    var _rn := r xor n\n    var _ir := i xor r\n    var _nr := n xor r\n"
---
"b"@(FileId(1), 9..10) [ConstVar(Var, No)]: boolean
"r"@(FileId(1), 29..30) [ConstVar(Var, No)]: real
"i"@(FileId(1), 46..47) [ConstVar(Var, No)]: int
"n"@(FileId(1), 62..63) [ConstVar(Var, No)]: nat
"_bi"@(FileId(1), 78..81) [ConstVar(Var, No)]: <error>
"_bn"@(FileId(1), 101..104) [ConstVar(Var, No)]: <error>
"_ib"@(FileId(1), 124..127) [ConstVar(Var, No)]: <error>
"_nb"@(FileId(1), 147..150) [ConstVar(Var, No)]: <error>
"_ri"@(FileId(1), 170..173) [ConstVar(Var, No)]: <error>
"_rn"@(FileId(1), 193..196) [ConstVar(Var, No)]: <error>
"_ir"@(FileId(1), 216..219) [ConstVar(Var, No)]: <error>
"_nr"@(FileId(1), 239..242) [ConstVar(Var, No)]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 87..90): mismatched types for logical `xor`
| note for (FileId(1), 91..92): this is of type `int`
| note for (FileId(1), 85..86): this is of type `boolean`
| error for (FileId(1), 87..90): `boolean` cannot be `xor`ed logically by `int`
| info: operands must both be integers or booleans
error at (FileId(1), 110..113): mismatched types for logical `xor`
| note for (FileId(1), 114..115): this is of type `nat`
| note for (FileId(1), 108..109): this is of type `boolean`
| error for (FileId(1), 110..113): `boolean` cannot be `xor`ed logically by `nat`
| info: operands must both be integers or booleans
error at (FileId(1), 133..136): mismatched types for logical `xor`
| note for (FileId(1), 137..138): this is of type `boolean`
| note for (FileId(1), 131..132): this is of type `int`
| error for (FileId(1), 133..136): `int` cannot be `xor`ed logically by `boolean`
| info: operands must both be integers or booleans
error at (FileId(1), 156..159): mismatched types for logical `xor`
| note for (FileId(1), 160..161): this is of type `boolean`
| note for (FileId(1), 154..155): this is of type `nat`
| error for (FileId(1), 156..159): `nat` cannot be `xor`ed logically by `boolean`
| info: operands must both be integers or booleans
error at (FileId(1), 179..182): mismatched types for bitwise `xor`
| note for (FileId(1), 183..184): this is of type `int`
| note for (FileId(1), 177..178): this is of type `real`
| error for (FileId(1), 179..182): `real` cannot be `xor`ed bitwise by `int`
| info: operands must both be integers or booleans
error at (FileId(1), 202..205): mismatched types for bitwise `xor`
| note for (FileId(1), 206..207): this is of type `nat`
| note for (FileId(1), 200..201): this is of type `real`
| error for (FileId(1), 202..205): `real` cannot be `xor`ed bitwise by `nat`
| info: operands must both be integers or booleans
error at (FileId(1), 225..228): mismatched types for bitwise `xor`
| note for (FileId(1), 229..230): this is of type `real`
| note for (FileId(1), 223..224): this is of type `int`
| error for (FileId(1), 225..228): `int` cannot be `xor`ed bitwise by `real`
| info: operands must both be integers or booleans
error at (FileId(1), 248..251): mismatched types for bitwise `xor`
| note for (FileId(1), 252..253): this is of type `real`
| note for (FileId(1), 246..247): this is of type `nat`
| error for (FileId(1), 248..251): `nat` cannot be `xor`ed bitwise by `real`
| info: operands must both be integers or booleans
